# libplanfahr

./: .gitignore  .travis.yml  HACKING  Makefile.am  README  README.md  autogen.sh  configure.ac  flymake.mk  run.in
data/: Makefile.am  libplanfahr-0.0.pc.in
docs/reference/: Makefile.am  build-howto.xml  libplanfahr-0.0-docs.sgml
examples/: trip-query.py
libplanfahr/: Makefile.am  libplanfahr.h  libplanfahr.sym  lpf-enumtypes.c.template  lpf-enumtypes.h.template  lpf-loc.c  lpf-loc.h  lpf-manager.c  lpf-manager.h  lpf-priv.h  lpf-provider.c  lpf-provider.h  lpf-stop.c  lpf-stop.h  lpf-trip-part.c  lpf-trip-part.h  lpf-trip.c  lpf-trip.h
libplanfahr/providers/: Makefile.am  ch-sbb.c  ch-sbb.h  de-bvg.c  de-bvg.h  de-db.h  hafas-bin6-format.h  hafas-bin6.c  hafas-bin6.h  test-test.c  test-test.h
libplanfahr/providers/tests/: Makefile.am  hafas-bin6-format.c  hafas-bin6.c
libplanfahr/tests/: Makefile.am  lpf-loc.c  lpf-manager.c  lpf-trip.c
m4/: lpf-compile-warnings.m4  manywarnings.m4
src/: Makefile.am  libplanfahr.c  libplanfahr.h  libplanfahr.sym  lpf-loc.c  lpf-loc.h  lpf-manager.c  lpf-manager.h  lpf-priv.h  lpf-provider.c  lpf-provider.h  lpf-stop.c  lpf-stop.h  lpf-trip-part.c  lpf-trip-part.h  lpf-trip.c  lpf-trip.h
src/providers/: Makefile.am  ch-sbb.c  de-bvg.c  de-db.c  de-db.h  hafas-bin6-format.h  hafas-bin6.c  hafas-bin6.h
src/providers/tests/: Makefile.am  de-db.c
tests/helpers/: run-in-docker
